--- a/docs/mutect/mutect.tex
+++ b/docs/mutect/mutect.tex
@@ -13,8 +13,9 @@
 \usepackage{listings}
 \lstset{basicstyle=\ttfamily,
   showstringspaces=false,
-  commentstyle=\color{red},
-  keywordstyle=\color{blue}
+  commentstyle=\color{gray},
+  keywordstyle=\color{blue},
+  captionpos=b
 }
 
 %Put an averaged random variable between brackets
@@ -95,7 +96,7 @@ gatk Mutect2 -R reference.fasta \
    [-I tumor2.bam -I tumor3.bam . . .]  \
    # Mutect2 may input matched normals from the same individual
    [-I normal1.bam -I normal2.bam . . .]  \
-   # For most purposes Mutect2 should be supplied with gnomad
+   # For most purposes Mutect2 should be supplied with gnomAD
    [-germline-resource af-only-gnomad.vcf] \
     # Mutect2 may input a panel of normals to help identify technical artifacts
    [-pon panel_of_normals.vcf . . .]  \
@@ -178,15 +179,15 @@ P(\mathbb{R}, \vz, \vf | \mathbb{A}) = P(\vf) P(\vz | \vf)  P( \mathbb{R} | \vz,
 \end{equation}
 We want to marginalize the latent variables to obtain the evidence $P(\mathbb{R} | \mathbb{A})$, which we make tractable via a mean-field approximation $P(\mathbb{R}, \vz, \vf | \mathbb{A}) \approx q(\vz) q(\vf)$, which is exact in two limits.  First, if there are many reads, each allele is associated with many reads and therefore the Law of Large Numbers causes $\vf$ and $\vz$ to become uncorrelated.  Second, if the allele assignments of reads are obvious $\vz_r$ is effectively determinate, hence uncorrelated with $\vf$.  In the variational Bayesian mean-field formalism we have
 \begin{align}
-q(\vf) \propto& E_{q(\vz)} \left[ P(\mathbb{R}, \vz, \vf | \mathbb{A}) \right] \propto {\rm Dir}(\vf | \valpha + \sum_r \bar{\vz}_r) \equiv {\rm Dir}(\vf | \vbeta), \quad \vbeta = \valpha + \sum_r \bar{\vz}_r \label{z_mean_field}  \\
-q(\vz_r) \propto& E_{q(\vf)} \left[ P(\mathbb{R}, \vz, \vf | \mathbb{A}) \right]  \propto \prod_a \left( \tilde{f}_a \ell_{ra}\right)^{z_{ra}}, \label{f_mean_field}
+q(\vf) \propto& \exp E_{q(\vz)} \left[ \ln P(\mathbb{R}, \vz, \vf | \mathbb{A}) \right] \propto {\rm Dir}(\vf | \valpha + \sum_r \bar{\vz}_r) \equiv {\rm Dir}(\vf | \vbeta), \quad \vbeta = \valpha + \sum_r \bar{\vz}_r \label{z_mean_field}  \\
+q(\vz_r) \propto& \exp E_{q(\vf)} \left[ \ln P(\mathbb{R}, \vz, \vf | \mathbb{A}) \right]  \propto \prod_a \left( \tilde{f}_a \ell_{ra}\right)^{z_{ra}}, \label{f_mean_field}
 \end{align}
 where, with $\psi$ denoting the digamma function, the moments
 \begin{align}
 \bar{z}_{ra} =& E_{q(\vz)} \left[ z_{ra} \right] = \frac{\tilde{f}_a \ell_{ra}}{\sum_{a^\prime} \tilde{f}_{a^\prime} \ell_{ra^\prime}} \\
 \ln \tilde{f}_a =& E_{q(\vf)}[\ln f_a] = \psi(\beta_a) - \psi(\sum_{a^\prime} \beta_{a^\prime})
 \end{align}
-are easily obtained from the categorical distribution $q(\vz)$ and the Dirichlet distribution $q(\vf)$\footnote{Note that we didn't \textit{impose} this in any way.  It simply falls out of the mean field equations.}  We initialize $\bar{z}_{ra} = 1$ if $a$ is the most likely allele for read $r$, 0 otherwise and iterate Equations \ref{z_mean_field} and \ref{f_mean_field} until convergence. Having obtained the mean fields of $q(\vz)$ and $q(\vf)$, we use the variational approximation (Bishop's Eq 10.3) to the model evidence:
+are easily obtained from the categorical distribution $q(\vz)$ and the Dirichlet distribution $q(\vf)$\footnote{Note that we didn't \textit{impose} this in any way.  It simply falls out of the mean field equations.}.  We initialize $\bar{z}_{ra} = 1$ if $a$ is the most likely allele for read $r$, 0 otherwise and iterate Equations \ref{z_mean_field} and \ref{f_mean_field} until convergence. Having obtained the mean fields of $q(\vz)$ and $q(\vf)$, we use the variational approximation (Bishop's Eq 10.3) to the model evidence:
 \begin{align}
 \ln P(\mathbb{R} | \mathbb{A}) \approx  E_q \left[ \ln P(\mathbb{R}, \vz, \vf | \mathbb{A}) \right] - E_q \left[ \ln q(\vz) \right] - E_q \left[ \ln q(\vf) \right]. \label{lagrangian}
 \end{align}
@@ -231,12 +232,12 @@ The optional inputs from the GATK 4 tool \code{CalculateContamination} are descr
 \subsection{Filtering Architecture}
 \code{FilterMutectCalls} contains a set of filters, each of which computes an error probability for each candidate variant.  The filters are divided into three categories: technical artifacts, non-somatic, and sequencing error.  Roughly, we assume that different types of errors within a category are correlated, while different categories are independent.  For example, whether sequencing errors cause several bases to be misread is independent of whether the DNA being read came from a contaminating sample and of whether an error during library preparation caused a base error prior to sequencing.  To obtain an overall error probability \code{FilterMutectCalls} computes the maximum within categories and an independent product between categories.  That is:
 \begin{equation}
-P({\rm error}) = 1 - (1 - {\rm max~artifact~error~prob})(1 - {\rm max~non-somatic~prob})(1 - {\rm sequencing~error~prob}).
+P({\rm error}) = 1 - (1 - \textrm{max artifact error prob})(1 - \textrm{max non-somatic prob})(1 - \textrm{sequencing error prob}).
 \end{equation}
 \code{FilterMutectCalls} goes over an unfiltered vcf in three passes, two to learn any unknown parameters of the filters' models and to set a threshold on $P({\rm error})$, and one to apply the learned filters.  This section describes methods for determining the threshold on error probability.  One option is to simply set a fixed value $p$ on the error probability, below which a call is considered a real somatic variant.  This non-default behavior can be set via \code{--threshold-strategy CONSTANT --initial-threshold <double>}.
 
 \subsubsection{F Score Thresholding}
-\code{FilterMutectCalls} optimizes the F-score -- the harmonic mean of recall and precision -- as its default thresholding strategy.  The \code{--f-score-beta <double>} command line argument can be set to change the relative weight of recall to precision.  In order to optimize the F-score, \code{FilterMutectCalls} sorts all variants by the probability that they are errors, from least to greatest and calculated the F-score for thresholds in which the first $n$ variants pass, starting from $n = 0$ and ending at $n = N$, the total number of candidates.  This is a cheap $O(N)$ computation because initially the expected number of true positive and false positive calls are both zero.  When the threshold increases to admit a variant with error probability $p$, the expected number of true positive calls increases by $1 - p$ and the expected number of false positive calls increases by $p$.  The total expected number of real variants is $\sum_n (1 - p_n)$.  These quantities suffice to calculate recall and precision for every threshold.
+\code{FilterMutectCalls} optimizes the F-score -- the harmonic mean of recall and precision -- as its default thresholding strategy.  The \code{--f-score-beta <double>} command line argument can be set to change the relative weight of recall to precision.  In order to optimize the F-score, \code{FilterMutectCalls} sorts all variants by the probability that they are errors, from least to greatest and calculates the F-score for thresholds in which the first $n$ variants pass, starting from $n = 0$ and ending at $n = N$, the total number of candidates.  This is a cheap $O(N)$ computation because initially the expected number of true positive and false positive calls are both zero.  When the threshold increases to admit a variant with error probability $p$, the expected number of true positive calls increases by $1 - p$ and the expected number of false positive calls increases by $p$.  The total expected number of real variants is $\sum_n (1 - p_n)$.  These quantities suffice to calculate recall and precision for every threshold.
 
 \subsubsection{False Discovery Rate Thresholding}
 \code{FilterMutectCalls} can also choose to maximize sensitivity subject to a maximum allowable false discovery rate using the \code{--threshold-strategy FALSE\_DISCOVERY\_RATE --false-discovery-rate <double>}.  For this calculation \code{FilterMutectCalls} also sorts the error probabilities $p_n$ from least to greatest.  If we allow the first $M$ variants to pass the expected false discovery rate is
@@ -275,19 +276,19 @@ Several filters are hard filters that assign an error probability of 1 whenever 
 \subsection{Allele Fraction Clustering Model}
 Several of \code{FilterMutectCalls}'s probabilistic filters rely on the following graphical model for the tumor's spectrum of allele fractions of real variants.  At the top of the model is a binary indicator for whether a variant is neither a technical artifact or a non-somatic mutation.
 \begin{equation}
-P({\rm consider}) = (1 - {\rm max~artifact~error~prob})(1 - {\rm max~non-somatic~prob}).
+P({\rm consider}) = (1 - \textrm{max artifact error prob})(1 - \textrm{max non-somatic prob}).
 \end{equation}
-Note that possible sequencing errors, with error probability captured by the independent reads assumption of the \code{Mutect2} log odds, \textit{are} considered.  Next, a candidate SNV has prior probability $\pi_{\rm real} = \pi_{\rm SNV} / 3$ to be real and prior probability $1 - \pi{\rm SNV}/3$ to be a sequencing error, while a candidate indel of length $L$ (negative for deletions, positive for insertions) has prior probability $\pi_{\rm real} = \pi_L$ to be real.  Real variants are partitioned according to a mixture model with weights $\pi_{H}$ for a high-allele fraction cluster, $\pi_B$ for a ``background cluster'', and $\pi_{D} = 1 - \pi_H - \pi_B$ to be further clustered into according to a Dirichlet process with concentration $\alpha$.  Each non-error cluster has a characteristic distribution of allele fractions:  ${\rm Beta}(\alpha_H, \beta_H)$ and ${\rm Beta}(\alpha_B, \beta_B)$ for the high-allele fraction and background clusters, and Dirac $\delta$ functions for the Dirichlet clusters.  The idea of this partitioning is that there will usually be sharply-defined allele fractions corresponding to the hets of different subclones, which are captured by the Dirichlet clusters, but that homozygosity and copy-number variation produces deviations from this clustering.
+Note that possible sequencing errors, with error probability captured by the independent reads assumption of the \code{Mutect2} log odds, \textit{are} considered.  Next, a candidate SNV has prior probability $\pi_{\rm real} = \pi_{\rm SNV} / 3$ to be real and prior probability $1 - \pi_{\rm SNV}/3$ to be a sequencing error, while a candidate indel of length $L$ (negative for deletions, positive for insertions) has prior probability $\pi_{\rm real} = \pi_L$ to be real.  Real variants are partitioned according to a mixture model with weights $\pi_{H}$ for a high-allele fraction cluster, $\pi_B$ for a ``background cluster'', and $\pi_{D} = 1 - \pi_H - \pi_B$ to be further clustered into according to a Dirichlet process with concentration $\alpha$.  Each non-error cluster has a characteristic distribution of allele fractions:  ${\rm Beta}(\alpha_H, \beta_H)$ and ${\rm Beta}(\alpha_B, \beta_B)$ for the high-allele fraction and background clusters, and Dirac $\delta$ functions for the Dirichlet clusters.  The idea of this partitioning is that there will usually be sharply-defined allele fractions corresponding to the hets of different subclones, which are captured by the Dirichlet clusters, but that homozygosity and copy-number variation produce deviations from this clustering.
 
-Provided that we stochastically assign a variant to be considered, the (relative) prior probabilities for each possibility are described by a modified Chinese Restaurant Process scheme:
+Provided that we stochastically assign the $i$th variant as non-artifactual, the prior probabilities for each possibility are described by a modified Chinese Restaurant Process scheme:
 \begin{align}
-P({\rm Sequencing~error}) \propto& 1 - \pi_{\rm real} \\
-P({\rm High~AF}) \propto& \pi_{\rm real} \pi_H \\
-P({\rm Background}) \propto& \pi_{\rm real} \pi_B \\
-P({\rm Dirichlet}_j) \propto& \pi_{\rm real} \pi_D \frac{ N_j}{N_D + \alpha} \\
-P({\rm Dirichlet}_{\rm new}) \propto& \pi_{\rm real} \pi_D \frac{ \alpha}{N_D + \alpha},
+P({\rm Sequencing~error}) =& 1 - \pi_{\rm real} \\
+P({\rm High~AF}) =& \pi_{\rm real} \pi_H \\
+P({\rm Background}) =& \pi_{\rm real} \pi_B \\
+P({\rm Dirichlet}_j) =& \pi_{\rm real} \pi_D \frac{ N^{-i}_j}{N^{-i}_D + \alpha} \\
+P({\rm Dirichlet}_{\rm new}) =& \pi_{\rm real} \pi_D \frac{ \alpha}{N^{-i}_D + \alpha},
 \end{align}
-where ${\rm D}_j$ denotes the $j$th existing Dirichlet Process cluster, ${\rm Dirichlet}_{\rm new}$ denotes a newly-created Dirichlet cluster, $N_j$ is the number of variants assigned to cluster $j$, and $N_D$ is the total number of variants assigned to Dirichlet clusters.
+where ${\rm Dirichlet}_j$ denotes the $j$th existing Dirichlet Process cluster, ${\rm Dirichlet}_{\rm new}$ denotes a newly-created Dirichlet cluster, $N^{-i}_j$ is the number of variants besides the $i$th assigned to cluster $j$, and $N^{-i}_D$ is the total number of variants besides the $i$th assigned to Dirichlet clusters.
 
 \code{Mutect2} emits the likelihood ratio between sequencing error and a real variant assuming a flat prior.  However, we can approximately compute the likelihood ratio that a non-flat Beta prior would have produced.  We can do this because in Equation \ref{tumor-lod} a change in the prior allele fraction is unlikely to affect $\bar{z}$ very much - usually the allele that a read supports is clear regardless of prior.  Therefore, only the term $g(\valpha) - g(\vbeta)$ changes.  Since $\vbeta = \valpha + \vn$, where $\vn$ is the vector of observed read counts per allele we can convert the log-likelihood obtained with flat prior $\valpha_0$ to one reflecting an allele fraction prior $\valpha$ by adding
 \begin{equation}
@@ -296,7 +297,7 @@ where ${\rm D}_j$ denotes the $j$th existing Dirichlet Process cluster, ${\rm Di
 
 Since only \textit{ratios} of likelihoods are meaningful, we may WLOG set the likelihood of reads given sequencing error to be $1$ and then set the likelihood fo each allele fraction cluster to be $\exp \left[ {\rm Mutect2~log~odds} + \Delta {\rm log~odds}(\valpha) \right]$.  The likelihood of a new cluster is the average over all possible new allele fractions of the likelihood, which is, by definition, simply the original \code{Mutect2} likelihood that integrated over a flat prior.  Thus we have likelihoods for every cluster.  Combined with the priors, this gives us the conditional posterior for Gibbs sampling the cluster assignment of a candidate variant.
 
-We can estimate the parameters of the model by maximum likelihood.  For example, we estimate $\pi_L$ as the total number of length-$L$ indels in the non-error clusters divided by the total number of callable sites\footnote{This is emitted by \code{Mutect2} and passed to \code{FilterMutectCalls}.}, $\pi_B$ as the total number of variants assigned to the background cluster divided by the total number of non-error assignments.  The allele fraction of a Dirichlet cluster is estimated as its total alt read count divided by its total read count.  Final, the beta distributions of the high-allele fraction and background clusters are fit by brute force likelihood optimization.
+We can estimate the parameters of the model by maximum likelihood.  For example, we estimate $\pi_L$ as the total number of length-$L$ indels in the non-error clusters divided by the total number of callable sites\footnote{This is emitted by \code{Mutect2} and passed to \code{FilterMutectCalls}.}, $\pi_B$ as the total number of variants assigned to the background cluster divided by the total number of non-error assignments.  The allele fraction of a Dirichlet cluster is estimated as its total alt read count divided by its total read count.  Finally, the beta distributions of the high-allele fraction and background clusters are fit by brute force likelihood optimization.
 
 Once the model converges, the combination of cluster weights and allele-fraction-adjusted likelihoods lets us compute the posterior probability that a candidate variant is a sequencing error, which determines the \code{weak\_evidence} filter.  Since the clusters also define distributions on alt allele counts -- the high-AF and background clusters define beta-binomials and the Dirichlet clusters define binomial -- we also have the mixture model distribution $P({\rm alt~count} | {\rm total~count}, {\rm somatic})$, which the contamination and germline filters use.
 
@@ -314,20 +315,20 @@ Once the model converges, the combination of cluster weights and allele-fraction
 
 The strand artifact filter detects sequencing artifacts in which the evidence for the alt allele consists entirely of forward strand reads alone or reverse strand reads alone. We must detect this while taking into account the fact that at some loci, such as near the end of an exome target, \emph{all} reads are biased towards one direction, and therefore a bias towards a particular strand among alt reads is no cause for alarm.
 
-Let $z \in \{ z_+, z_-, z_o \}$ be a latent random variable with 1-hot encoding that represents the artifact state of a suspected variant i.e. $z_+ = 1$ for a forward strand artifact, $z_- = 1$ for a reverse artifact, and $z_o = 1$ otherwise. At each locus, let $a_\pm$ be the number of forward (+) or reverse (-) strand alt reads and let $n_\pm$ be the total depth for each strand.  By modeling $a+_\pm$ relative to $n_\pm$ we account for inherent strand bias due to, for example, reads falling at the end of an exome target and do not confuse it for an artifact.  Let $f$ be the allele fraction of true variation in case $z_o = 1$.  Let $\epsilon$ be the strand bias error rate and let $\theta$ be the non-strand-biased error rate.  We will ignore the case in which significant strand bias coincides with real variation, first because this is exceedingly rare and ignoring it has a negligible effect on the parameters of our model, and secondly because such variants should be considered true positives.
+Let $z \in \{ z_+, z_-, z_o \}$ be a latent random variable with 1-hot encoding that represents the artifact state of a suspected variant i.e. $z_+ = 1$ for a forward strand artifact, $z_- = 1$ for a reverse artifact, and $z_o = 1$ otherwise. At each locus, let $x_\pm$ be the number of forward (+) or reverse (-) strand alt reads and let $n_\pm$ be the total depth for each strand.  By modeling $x_\pm$ relative to $n_\pm$ we account for inherent strand bias due to, for example, reads falling at the end of an exome target and do not confuse it for an artifact.  Let $f$ be the allele fraction of true variation in case $z_o = 1$.  Let $\epsilon$ be the strand bias error rate and let $\theta$ be the non-strand-biased error rate.  We will ignore the case in which significant strand bias coincides with real variation, first because this is exceedingly rare and ignoring it has a negligible effect on the parameters of our model, and secondly because such variants should be considered true positives.
 
 
 The conditional distributions of our model are binomial
 \begin{align}
-a_+ | \epsilon, \theta, f, z_+ = 1 &\sim \text{Bin} (a_+ | n_+, \epsilon) \\
-a_+ | \epsilon, \theta, f, z_- = 1 &\sim \text{Bin} (a_+ | n_+, \theta) \\
-a_+ | \epsilon, \theta, f, z_o = 1 &\sim \text{Bin} (a_+ | n_+, f),
+x_+ | \epsilon, \theta, f, z_+ = 1 &\sim \text{Bin} (x_+ | n_+, \epsilon) \\
+x_+ | \epsilon, \theta, f, z_- = 1 &\sim \text{Bin} (x_+ | n_+, \theta) \\
+x_+ | \epsilon, \theta, f, z_o = 1 &\sim \text{Bin} (x_+ | n_+, f),
 \end{align}
-and similarly for $a_-$.  Putting beta priors on $\epsilon$, $\theta$, and $f$, with parameters $(\alpha_\epsilon, \beta_\epsilon)$, $(\alpha_\theta, \beta_\theta)$, and $(\alpha_f, \beta_f)$ and marginalizing latent parameters we obtain likelihoods
+and similarly for $x_-$.  Putting beta priors on $\epsilon$, $\theta$, and $f$, with parameters $(\alpha_\epsilon, \beta_\epsilon)$, $(\alpha_\theta, \beta_\theta)$, and $(\alpha_f, \beta_f)$ and marginalizing latent parameters we obtain likelihoods
 \begin{align}
-P(a_+, a_- | z_\pm = 1) =& \text{BetaBinom}(a_\pm | n_\pm, \alpha_\epsilon, \beta_\epsilon) \text{BetaBinom}(a_\mp | n_\mp, \alpha_\theta, \beta_\theta) \\
-P(a_+, a_- | z_o = 1) =& \int_0^1 \text{Beta}(f | \alpha_f, \beta_f) \text{Binom}(a_+ | n_+, f) \text{Binom}(a_- | n_-, f) \\ 
-                                  =& \frac{ \binom{n_+}{a_+} \binom{n_-}{a_-}}{\binom{n_+ + n_-}{a_+ + a_-}} \text{BetaBinom}(a_+ + a_- | n_+ + n_-, \alpha_f, \beta_f)
+P(x_+, x_- | z_\pm = 1) =& \text{BetaBinom}(x_\pm | n_\pm, \alpha_\epsilon, \beta_\epsilon) \text{BetaBinom}(x_\mp | n_\mp, \alpha_\theta, \beta_\theta) \\
+P(x_+, x_- | z_o = 1) =& \int_0^1 \text{Beta}(f | \alpha_f, \beta_f) \text{Binom}(x_+ | n_+, f) \text{Binom}(x_- | n_-, f) df \\ 
+                                  =& \frac{ \binom{n_+}{x_+} \binom{n_-}{x_-}}{\binom{n_+ + n_-}{x_+ + x_-}} \text{BetaBinom}(x_+ + x_- | n_+ + n_-, \alpha_f, \beta_f)
 \end{align}
 
 Finally, we let $\pi/2$ be the prior probability of a forward or reverse strand artifact.  From the above equations it is straightforward to calculate the posterior probability of $z$ and to learn $\pi$ iteratively via the EM algorithm.  It is somewhat more complicated to learn $(\alpha_\epsilon, \beta_\epsilon)$ and $(\alpha_\theta, \beta_\theta)$, so we treat these as fixed hyperparameters.  We use a flat prior $\alpha_f = \beta_f = 1$ for the true allele fraction.
