Added ARCHIVED headers.

--- a/docs/CNV/archived/archived-CNV-methods.tex
+++ b/docs/CNV/archived/archived-CNV-methods.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{mathrsfs}
+\usepackage{fancyhdr}
 
 %Put an averaged random variable between brackets
 \DeclareMathOperator*{\argmax}{\arg\!\max}
@@ -84,6 +85,11 @@
 \makeatother
 
 \begin{document}
+
+\pagestyle{fancy}
+\lhead{}
+\chead{(ARCHIVED) Notes on CNV Methods}
+\rhead{}
 
 \title{(ARCHIVED) Notes on CNV Methods}
 
