--- a/docs/CNV/archived/archived-coverage-model.tex
+++ b/docs/CNV/archived/archived-coverage-model.tex
@@ -8,6 +8,7 @@
 \usepackage{color}
 \usepackage{mathrsfs}
 \usepackage{bm}
+\usepackage{fancyhdr}
 
 %Put an averaged random variable between brackets
 \newcommand{\ave}[1]{\left\langle #1 \right\rangle}
@@ -87,6 +88,11 @@
 \makeatother
 
 \begin{document}
+
+\pagestyle{fancy}
+\lhead{}
+\chead{(ARCHIVED) A probabilistic model for coverage bias estimation and CNV detection}
+\rhead{}
 
 \title{(ARCHIVED) A probabilistic model for coverage bias estimation and CNV detection}
 
