Addressed PR comments.

--- a/docs/CNV/germline-cnv-caller-model.tex
+++ b/docs/CNV/germline-cnv-caller-model.tex
@@ -98,12 +98,12 @@ We introduce GATK gCNV, a novel algorithm and tool for the discovery of rare and
 \section{Introduction}
 Copy-number variation (CNV) is a class of genomic {\em structural variation} where the {\em integer copy-number state} of a large genomic region (typically $>$1000 base pairs, spanning several consecutive exons or genes) is altered with respect to a reference genome.  Inferring these copy-number states is an important problem in computational genomics, both for research applications and clinical practice~\cite{zhang2009copy}. Inferring integer CNV states from NGS read-depth data begins with aligning short reads (sequences of $\sim$100 base pairs from a sample genome) to the reference genome and counting the number of reads that align to each region.  Calling CNV events from these counts is a challenging problem due to strong systematic biases, which can arise from batch effects in sample preparation and sequencing library preparation protocols, variation in sequencing efficiency across genomic regions, and numerous other hidden processes.
 
-Many previous methods for CNV detection from read-depth data attempt to remove systematic biases via PCA denoising \cite{fromer_discovery_2012} or regression~\cite{jiang_codex:_2015, klambauer_cn.mops:_2012}, or try to obviate the issue by pre-clustering samples and genomic regions~\cite{handsaker_large_2015, packer_clamms:_2016}.  CNVs are subsequently detected using hidden Markov models (HMM) or non-parametric change-point detection algorithms~\cite{olshen_circular_2004}. Crucially, these methods suffer from a lack of self-consistency between data normalization and event detection, which results in inadvertent removal of signal in the former and decreased sensitivity in the latter.
+Many previous methods for CNV detection from read-depth data attempt to remove systematic biases via PCA denoising \cite{fromer_discovery_2012} or regression~\cite{jiang_codex:_2015, klambauer_cn.mops:_2012}, or try to obviate the issue by pre-clustering samples and genomic regions~\cite{handsaker_large_2015, packer_clamms:_2016}.  CNVs are subsequently detected using hidden Markov models (HMM) or non-parametric change-point detection algorithms~\cite{olshen_circular_2004}. Crucially, these methods suffer from a lack of self-consistency between data normalization and event detection, which results in inadvertent removal of signal in the former and decreased sensitivity in the latter (as discussed in, e.g., ~\cite{jiang_codex:_2015}).
 
-Here, we propose and implement GATK gCNV, a principled Bayesian approach for learning global and sample-specific biases of read-depth data from large cohorts while {\em simultaneously} inferring copy-number states. Our model combines a negative-binomial factor analysis module for learning batch effects with a hierarchical HMM (HHMM) for detecting both sample-specific CNV events and global regions of high and low CNV activity.  Self-consistency between bias modeling and CNV calling greatly improves the performance of our algorithm with respect to existing methods.
+Here, we present GATK gCNV, a principled Bayesian approach for learning global and sample-specific biases of read-depth data from large cohorts while {\em simultaneously} inferring copy-number states. Our model combines a negative-binomial factor analysis module for learning batch effects with a hierarchical HMM (HHMM) for detecting both sample-specific CNV events and global regions of high and low CNV activity.  Self-consistency between bias modeling and CNV calling greatly improves the performance of our algorithm with respect to existing methods.
 
 \section{Summary of Methods}\label{sec:methods}
-\noindent{\em\bf Modeling read-depth ---} We seek to model the data $n_{st}$, the integer count of aligned reads for sample $s=1, 2, \ldots, S$ in genomic region $t=1, 2, \ldots, T$.  A negative-binomial distribution for $n_{st}$ is theoretically and empirically justified; taking $\lambda_{st}$ as the Poisson parameter and $\alpha_{st}$ as the Gamma distribution parameter, we may write
+\noindent{\em\bf Modeling read-depth ---} We seek to model the data $n_{st}$, the integer count of aligned reads for sample $s=1, 2, \ldots, S$ in genomic region $t=1, 2, \ldots, T$.  We model $n_{st}$ with a negative-binomial distribution; taking $\lambda_{st}$ as the Poisson parameter and $\alpha_{st}$ as the Gamma distribution parameter, we may write
 \begin{equation}
 \begin{split}
 n_{st} &\sim \mathsf{NegativeBinomal}(\lambda_{st}, \alpha_{st}),\\
@@ -130,7 +130,7 @@ Certain genomic regions are biologically more prone to CNV events. We introduce 
 \begin{multline}
 p(\tau_t \rightarrow \tau_{t+1}) = \exp(-\Delta_{t, t+1}/d_\tau) \, \delta(\tau_t, \tau_{t+1}) \\+ [1 - \exp(-\Delta_{t, t+1}/d_\tau)]\,p(\tau_{t+1}),
 \end{multline}
-where $p(\tau_{t})$ the prior region class probability, $\Delta_{t, t+1}$ is the genomic distance between region $t$ and $t+1$, and $d_\tau$ is the typical size of regions with similar CNV activity rates.
+where $p(\tau_{t})$ the prior region class probability, $\Delta_{t, t+1}$ is the genomic distance between the midpoints of region $t$ and $t+1$, and $d_\tau$ is the typical size of regions with similar CNV activity rates.
 
 Sample-specific copy-numbers are modeled similarly, with one Markov chain per sample; however, priors and transition probabilities are conditioned on the region class $\tau_t$. We set a {\em baseline} copy-number state matrix for each sample $\kappa_{st}$ in a preliminary modeling step that estimates chromosome-level copy numbers. That is, $\kappa_{st}$ denotes the copy-number state in the absence of any CNV event. We use a prior copy-number probability that strongly prefers the baseline state $\kappa_{st}$ in regions where $\tau_t = \mathrm{silent}$ and we use a flat prior where $\tau_t = \mathrm{active}$. The copy-number transition matrix is an exponentially decaying process as before, but with a different decay length $d_\mathrm{CNV}$ and per-region priors. The dependency relations of the resulting hierarchical HMM are shown graphically in Fig.~\ref{fig:hhmm}.\\
 % The complete model is obtained by attaching the denoising module to emission vertices of the HHMM and is shown in Fig.~\ref{fig:full_model}.
@@ -152,7 +152,7 @@ Sample-specific copy-numbers are modeled similarly, with one Markov chain per sa
 \section{Benchmarking}\label{sec:bench}
 \begin{figure}
 \includegraphics[width=\columnwidth]{figures/germline-cnv-caller-model/benchmark.pdf}
-\caption{The performance of GATK gCNV, XHMM \cite{fromer_discovery_2012}, and CODEX \cite{jiang_codex:_2015} in detecting CNV events from WES data against a matched WGS callset obtained using Genome STRiP \cite{handsaker_large_2015}.  Performance metrics are reported per WES target.}  
+\caption{The performance of GATK gCNV, XHMM \cite{fromer_discovery_2012}, and CODEX \cite{jiang_codex:_2015} in detecting CNV events from WES data against a matched WGS callset obtained using Genome STRiP \cite{handsaker_large_2015}.  Performance metrics are reported per WES target.  All curves are parameterized by call quality and the dashed red isoclines (right) indicate constant $F_1$ score.}  
 \label{fig:benchmark}
 \end{figure}
 Finally, we benchmark GATK gCNV using a cohort of whole-exome sequencing (WES) blood-normal samples. We use a manually validated and FDR-controlled callset obtained from matched whole-genome sequencing (WGS) samples using Genome STRiP~\cite{handsaker_large_2015} as the truth callset. To compare, we also include the CNV calls obtained using two popular CNV calling tools, XHMM \cite{fromer_discovery_2012} and CODEX \cite{jiang_codex:_2015}, in the benchmark. The results are shown in Fig.~\ref{sec:bench}. We find that GATK gCNV yields nearly $20\%$ higher sensitivity and $50\%$ higher specificity over all CNV events compared to the other methods.  Although not presented here, benchmarks that stratify by truth variant frequency also show that GATK gCNV performs favorably on common CNV events. More extensive benchmarking results demonstrate even further improvement, primarily resulting from GATK gCNV hyperparmeter optimization using additional WGS truth callsets, and will be presented elsewhere.
