Saliency Maps for MRI models (#21)
* add saliency maps find tensors

--- a/notebooks/ecg_fft.ipynb
+++ b/notebooks/ecg_fft.ipynb
@@ -21,13 +21,12 @@
     "from keras.layers import Input, Dense, Dropout, AlphaDropout, BatchNormalization, Activation\n",
     "\n",
     "# ML4CVD Imports\n",
-    "sys.path.append(\"../ml4cvd\")\n",
-    "from plots import plot_ecg\n",
-    "from arguments import parse_args\n",
-    "from recipes import train_multimodal_multitask\n",
+    "from ml4cvd.plots import plot_ecg\n",
+    "from ml4cvd.arguments import parse_args\n",
+    "from ml4cvd.recipes import train_multimodal_multitask\n",
     "\n",
     "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -43,7 +42,6 @@
     "root = et.parse(xml_file).getroot()\n",
     "for c in root.findall(\"./StripData/WaveformData\"):\n",
     "    strip_ekgs[c.attrib['lead']] = np.array(list(map(float, c.text.strip().split(','))))\n",
-    "    ffts[c.attrib['lead']] = np.fft.fft(strip_ekgs[c.attrib['lead']])\n",
     "\n",
     "plot_ecg(strip_ekgs, 'strip')"
    ]
@@ -62,20 +60,49 @@
     "\tdiagnosis = ''.join(e for e in d.text if e.isalnum() or e == ' ')\n",
     "\tprint(diagnosis)\n",
     "\n",
-    "    \n",
+    "rows = int(math.ceil(math.sqrt(len(strip_ekgs))))\n",
+    "cols = math.ceil(len(strip_ekgs)/rows)\n",
+    "fig, axes = plt.subplots(rows, cols, figsize=(28,24))\n",
+    "ffts = {}\n",
+    "filtered = {}\n",
+    "start_filter = 0\n",
+    "end_filter = 100\n",
+    "band_pass = True  # otherwise band block\n",
+    "for i,k in enumerate(strip_ekgs):\n",
+    "    ax = plt.subplot(rows, cols, i+1)\n",
+    "    ax.set_title('Frequency Magnitude '+k)\n",
+    "    ffts[k] = np.fft.fft(strip_ekgs[k])\n",
+    "    freq = np.fft.fftfreq(ffts[k].shape[-1])\n",
+    "    if band_pass:\n",
+    "        ffts[k][:start_filter] = np.zeros((start_filter,))\n",
+    "        ffts[k][end_filter:] = np.zeros((len(ffts[k])-end_filter,))\n",
+    "    else:\n",
+    "        ffts[k][start_filter:end_filter] = np.zeros(np.abs(end_filter-start_filter,))  \n",
+    "    filtered[k] = np.fft.ifft(ffts[k])\n",
+    "    ax.plot(freq, np.abs(ffts[k]))\n",
+    "    ax.set_ylim([-20, 60000])\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "rows = int(math.ceil(math.sqrt(len(ffts))))\n",
     "cols = math.ceil(len(ffts)/rows)\n",
     "fig, axes = plt.subplots(rows, cols, figsize=(28,24))\n",
-    "\n",
-    "for i,k in enumerate(ffts):\n",
+    "for i,k in enumerate(filtered):\n",
     "    ax = plt.subplot(rows, cols, i+1)\n",
-    "    ax.set_title('Frequency Magnitude '+k)\n",
-    "    freq = np.fft.fftfreq(ffts[k].shape[-1])\n",
-    "    ax.plot(freq, np.abs(ffts[k]))\n",
-    "    ax.set_ylim([-20, 60000])\n",
-    "    ax.set_xlim([-0.06, 0.06])\n",
+    "    ax.set_title('Filtered '+k)\n",
+    "    ax.plot(np.abs(filtered[k]))\n",
+    "    #ax.set_ylim([-20, 60000])\n",
+    "    #ax.set_xlim([-0.06, 0.06])\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()    "
    ]
   },
   {
@@ -137,6 +164,13 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -155,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
