--- a/notebooks/ecg_sketch.ipynb
+++ b/notebooks/ecg_sketch.ipynb
@@ -20,11 +20,10 @@
     "from keras.layers import Input, Dense, Dropout, AlphaDropout, BatchNormalization, Activation\n",
     "\n",
     "# ML4CVD Imports\n",
-    "sys.path.append(\"../ml4cvd\")\n",
-    "from plots import plot_ecg\n",
-    "from arguments import parse_args\n",
-    "from tensor_writer_ukbb import write_tensors\n",
-    "from recipes import train_multimodal_multitask\n",
+    "from ml4cvd.plots import plot_ecg\n",
+    "from ml4cvd.arguments import parse_args\n",
+    "from ml4cvd.tensor_writer_ukbb import write_tensors\n",
+    "from ml4cvd.recipes import train_multimodal_multitask\n",
     "\n",
     "# IPython imports\n",
     "from IPython.display import Image"
@@ -193,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
