--- a/notebooks/inspector.ipynb
+++ b/notebooks/inspector.ipynb
@@ -22,9 +22,8 @@
     "from IPython.display import Image\n",
     "\n",
     "# ML4CVD Imports\n",
-    "sys.path.append(\"../ml4cvd\")\n",
-    "from arguments import parse_args\n",
-    "from recipes import train_multimodal_multitask"
+    "from ml4cvd.arguments import parse_args\n",
+    "from ml4cvd.recipes import train_multimodal_multitask"
    ]
   },
   {
@@ -137,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
