--- a/notebooks/visualize.ipynb
+++ b/notebooks/visualize.ipynb
@@ -18,9 +18,8 @@
     "from keras import backend as K\n",
     "\n",
     "# ML4CVD Imports\n",
-    "sys.path.append(\"../ml4cvd\")\n",
-    "from arguments import parse_args\n",
-    "from models import make_multimodal_to_multilabel_model, train_model_from_generators\n",
+    "from ml4cvd.arguments import parse_args\n",
+    "from ml4cvd.models import make_multimodal_to_multilabel_model, train_model_from_generators\n",
     "\n",
     "# IPython imports\n",
     "from IPython.display import Image\n",
@@ -389,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
