--- a/notebooks/ecg_lunch.ipynb
+++ b/notebooks/ecg_lunch.ipynb
@@ -9,6 +9,7 @@
     "import os\n",
     "import sys\n",
     "import math\n",
+    "import h5py\n",
     "import argparse\n",
     "import numpy as np\n",
     "from collections import Counter\n",
@@ -28,13 +29,12 @@
     "from IPython.display import Image\n",
     "\n",
     "# ML4CVD Imports\n",
-    "sys.path.append(\"../ml4cvd\")\n",
-    "from plots import plot_ecg\n",
-    "from arguments import parse_args\n",
-    "from tensor_writer_ukbb import write_tensors\n",
-    "from recipes import train_multimodal_multitask\n",
-    "from models import make_multimodal_to_multilabel_model\n",
-    "from tensor_generators import TensorGenerator"
+    "from ml4cvd.plots import plot_ecg\n",
+    "from ml4cvd.arguments import parse_args\n",
+    "from ml4cvd.tensor_writer_ukbb import write_tensors\n",
+    "from ml4cvd.recipes import train_multimodal_multitask\n",
+    "from ml4cvd.models import make_multimodal_to_multilabel_model\n",
+    "from ml4cvd.tensor_generators import TensorGenerator"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "sys.argv = ['train', \n",
-    "            '--tensors', '/mnt/disks/ecg-text2/2019-03-30/', \n",
+    "            '--tensors', '/mnt/disks/ecg-text3/2019-04-26/', \n",
     "            '--input_tensors', 'ecg_rest', \n",
     "            '--output_tensors', 'ecg_rhythm', 'ecg_normal', 'p-axis', 'p-duration', \n",
     "                'p-offset', 'p-onset', 'pp-interval', 'pq-interval', 'q-offset', 'q-onset', \n",
@@ -52,7 +52,6 @@
     "            '--batch_size', '32', \n",
     "            '--epochs', '1',  \n",
     "            '--learning_rate', '0.0001',\n",
-    "            '--model_file', '/mnt/ml4cvd/projects/jamesp/data/models/ecg_regresser.hd5',\n",
     "            '--training_steps', '20',\n",
     "            '--inspect_model',\n",
     "            '--id', 'ecg_regresser']\n",
@@ -101,8 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import h5py\n",
-    "xdir = '/mnt/disks/ecg-text2/2019-03-30/'\n",
+    "xdir = '/mnt/disks/ecg-text3/2019-04-26/'\n",
     "paths = [xdir+'1238558.hd5', xdir+'1240625.hd5', xdir+'1258475.hd5', xdir+'1286494.hd5', xdir+'1381627.hd5']\n",
     "generator = TensorGenerator(3, args.tensor_maps_in, args.tensor_maps_out, paths, None, True)\n",
     "data, labels, hd5s = next(generator)\n",
@@ -282,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
