--- a/notebooks/mlp_tsne.ipynb
+++ b/notebooks/mlp_tsne.ipynb
@@ -20,11 +20,10 @@
     "from IPython.display import Image\n",
     "\n",
     "# ML4CVD Imports\n",
-    "sys.path.append(\"../ml4cvd\")\n",
-    "from arguments import parse_args\n",
-    "from tensor_generators import test_train_valid_tensor_generators\n",
-    "from recipes import train_shallow_model, train_multimodal_multitask, test_multimodal_multitask\n",
-    "from models import make_multimodal_to_multilabel_model, train_model_from_generators, make_hidden_layer_model\n",
+    "from ml4cvd.arguments import parse_args\n",
+    "from ml4cvd.tensor_generators import test_train_valid_tensor_generators\n",
+    "from ml4cvd.recipes import train_shallow_model, train_multimodal_multitask, test_multimodal_multitask\n",
+    "from ml4cvd.models import make_multimodal_to_multilabel_model, train_model_from_generators, make_hidden_layer_model\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -184,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
