--- a/notebooks/mri_outliers.ipynb
+++ b/notebooks/mri_outliers.ipynb
@@ -21,13 +21,12 @@
     "from keras.layers import Input, Dense, Dropout, AlphaDropout, BatchNormalization, Activation\n",
     "\n",
     "# ML4CVD Imports\n",
-    "sys.path.append(\"../ml4cvd\")\n",
-    "from plots import plot_ecg\n",
-    "from arguments import parse_args\n",
-    "from tensor_writer_ukbb import write_tensors\n",
-    "from recipes import train_multimodal_multitask\n",
-    "from models import make_multimodal_to_multilabel_model\n",
-    "from tensor_generators import big_batch_from_minibatch_generator, test_train_valid_tensor_generators, TensorGenerator\n",
+    "from ml4cvd.plots import plot_ecg\n",
+    "from ml4cvd.arguments import parse_args\n",
+    "from ml4cvd.tensor_writer_ukbb import write_tensors\n",
+    "from ml4cvd.recipes import train_multimodal_multitask\n",
+    "from ml4cvd.models import make_multimodal_to_multilabel_model\n",
+    "from ml4cvd.tensor_generators import big_batch_from_minibatch_generator, test_train_valid_tensor_generators, TensorGenerator\n",
     "\n",
     "# IPython imports\n",
     "from IPython.display import Image\n",
@@ -277,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
