--- a/notebooks/mri_sketch.ipynb
+++ b/notebooks/mri_sketch.ipynb
@@ -28,13 +28,12 @@
     "from IPython.display import Image\n",
     "\n",
     "# ML4CVD Imports\n",
-    "sys.path.append(\"../ml4cvd\")\n",
-    "from arguments import parse_args\n",
-    "from tensor_writer_ukbb import write_tensors\n",
-    "from tensor_generators import test_train_valid_tensor_generators\n",
-    "from defines import TENSOR_EXT, IMAGE_EXT, MRI_TO_SEGMENT, MRI_SEGMENTED\n",
-    "from recipes import train_multimodal_multitask, test_multimodal_multitask\n",
-    "from models import make_multimodal_to_multilabel_model, train_model_from_generators"
+    "from ml4cvd.arguments import parse_args\n",
+    "from ml4cvd.tensor_writer_ukbb import write_tensors\n",
+    "from ml4cvd.tensor_generators import test_train_valid_tensor_generators\n",
+    "from ml4cvd.defines import TENSOR_EXT, IMAGE_EXT, MRI_TO_SEGMENT, MRI_SEGMENTED\n",
+    "from ml4cvd.recipes import train_multimodal_multitask, test_multimodal_multitask\n",
+    "from ml4cvd.models import make_multimodal_to_multilabel_model, train_model_from_generators"
    ]
   },
   {
@@ -332,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
