--- a/notebooks/mri_tsne.ipynb
+++ b/notebooks/mri_tsne.ipynb
@@ -20,11 +20,10 @@
     "from IPython.display import Image\n",
     "\n",
     "# ML4CVD Imports\n",
-    "sys.path.append(\"../ml4cvd\")\n",
-    "from arguments import parse_args\n",
-    "from tensor_generators import big_batch_from_minibatch_generator, test_train_valid_tensor_generators\n",
-    "from recipes import train_shallow_model, train_multimodal_multitask, test_multimodal_multitask\n",
-    "from models import make_multimodal_to_multilabel_model, train_model_from_generators, make_hidden_layer_model\n",
+    "from ml4cvd.arguments import parse_args\n",
+    "from ml4cvd.tensor_generators import big_batch_from_minibatch_generator, test_train_valid_tensor_generators\n",
+    "from ml4cvd.recipes import train_shallow_model, train_multimodal_multitask, test_multimodal_multitask\n",
+    "from ml4cvd.models import make_multimodal_to_multilabel_model, train_model_from_generators, make_hidden_layer_model\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -38,7 +37,7 @@
    "outputs": [],
    "source": [
     "sys.argv = ['train', \n",
-    "            '--tensors', '/mnt/disks/tensors-lv-mass/', \n",
+    "            '--tensors', '/mnt/disks/pix-size-tensors/', \n",
     "            '--input_tensors', 'mri_systole_diastole_weighted', \n",
     "            '--output_tensors', 'mri_systole_diastole_segmented_weighted', 'lv_mass', \n",
     "            'end_systole_volume', 'end_diastole_volume', 'ejection_fraction',\n",
@@ -82,7 +81,7 @@
     "w1 = d1.get_weights()\n",
     "for w in w1:\n",
     "    print(w.shape)\n",
-    "embed_model = make_hidden_layer_model(model, layer_name)\n",
+    "embed_model = make_hidden_layer_model(model, 'input_mri_systole_diastole', layer_name)\n",
     "embed_model.summary()\n",
     "print(list(test_data.keys()))\n",
     "x_embed = embed_model.predict(test_data, batch_size=args.batch_size)\n",
@@ -184,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
