Better t-SNE support & tensor editting (#36)
phecode tensor maps, fix asserts, fix hyperoptimization, overlay extract, in-place merges, sentinel loss, liver fat and MRI tensorization

--- a/notebooks/mri_sketch.ipynb
+++ b/notebooks/mri_sketch.ipynb
@@ -179,13 +179,7 @@
     "            '--u_connect',\n",
     "            '--id', 'mri_slice_labeler']\n",
     "args = parse_args()\n",
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,\n",
-    "                                                                                       args.tensor_maps_out,\n",
-    "                                                                                       args.tensors, args.batch_size,\n",
-    "                                                                                       args.valid_ratio,\n",
-    "                                                                                       args.test_ratio,\n",
-    "                                                                                       args.icd_csv,\n",
-    "                                                                                       args.balance_by_icds)"
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)"
    ]
   },
   {
