--- a/notebooks/mri_tsne.ipynb
+++ b/notebooks/mri_tsne.ipynb
@@ -52,13 +52,7 @@
     "            '--model_file', '/mnt/ml4cvd/projects/jamesp/data/models/mri_systole_diastole_une_mass.hd5',\n",
     "            '--id', 'mri_systole_diastole_unet_lv_mass_diseases']\n",
     "args = parse_args()\n",
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,\n",
-    "                                                                                       args.tensor_maps_out,\n",
-    "                                                                                       args.tensors, args.batch_size,\n",
-    "                                                                                       args.valid_ratio,\n",
-    "                                                                                       args.test_ratio,\n",
-    "                                                                                       args.icd_csv,\n",
-    "                                                                                       args.balance_by_icds, True)\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
     "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
     "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
     "                                                args.dense_layers, args.dropout, args.mlp_concat, args.conv_layers,\n",
