--- a/notebooks/mlp_tsne.ipynb
+++ b/notebooks/mlp_tsne.ipynb
@@ -38,27 +38,18 @@
    "source": [
     "sys.argv = ['train', \n",
     "            '--tensors', '/mnt/disks/survey-tensors2/2019-03-25/', \n",
-    "            '--input_tensors', 'categorical-phenotypes-32', \n",
-    "            '--output_tensors', 'allergic_rhinitis', 'anxiety', 'asthma', 'atrial_fibrillation_or_flutter', 'back_pain', \n",
-    "            'breast_cancer', 'cardiac_surgery', 'cervical_cancer', 'colorectal_cancer', 'coronary_artery_disease_hard', \n",
-    "            'coronary_artery_disease_intermediate', 'coronary_artery_disease_soft', 'death', 'diabetes_all', \n",
-    "            'diabetes_type_1', 'diabetes_type_2', 'enlarged_prostate', 'heart_failure', 'hypertension', 'lung_cancer', \n",
-    "            'migraine', 'myocardial_infarction', 'osteoporosis', 'skin_cancer', 'stroke',\n",
+    "            '--input_tensors', 'categorical-phenotypes-94', \n",
+    "            '--output_tensors', 'categorical-phenotypes-94', \n",
     "            '--id', 'cat32_mlp',\n",
     "            '--epochs', '1',\n",
     "            '--training_steps', '100', \n",
     "            '--validation_steps', '2', \n",
-    "            '--batch_size', '512',\n",
-    "            '--model_file', '/mnt/ml4cvd/projects/jamesp/data/models/cat32_mlp.hd5'\n",
+    "            '--test_steps', '1',             \n",
+    "            '--batch_size', '1024',\n",
+    "            '--model_file', '/mnt/ml4cvd/projects/jamesp/data/models/cat94_autoencoder.hd5'\n",
     "           ]\n",
     "args = parse_args()\n",
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,\n",
-    "                                                                                       args.tensor_maps_out,\n",
-    "                                                                                       args.tensors, args.batch_size,\n",
-    "                                                                                       args.valid_ratio,\n",
-    "                                                                                       args.test_ratio,\n",
-    "                                                                                       args.icd_csv,\n",
-    "                                                                                       args.balance_by_icds)\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in, args.tensor_maps_out, args.tensors, args.batch_size, args.valid_ratio, args.test_ratio, args.test_modulo, args.icd_csv, args.balance_by_icds)\n",
     "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
     "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
     "                                                args.dense_layers, args.dropout, args.mlp_concat, args.conv_layers,\n",
@@ -80,7 +71,7 @@
     "rev_cm =  dict((v,k) for k,v in args.tensor_maps_in[0].channel_map.items())\n",
     "for w in w1:\n",
     "    print(w.shape)\n",
-    "embed_model = make_hidden_layer_model(model, layer_name)\n",
+    "embed_model = make_hidden_layer_model(model, args.tensor_maps_in, layer_name)\n",
     "embed_model.summary()\n",
     "test_data, test_labels, test_paths = next(generate_test)\n",
     "print(list(test_data.keys()))\n",
@@ -94,9 +85,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categorical_labels = ['Genetic-sex_Female_0_0', 'hypertension', 'coronary_artery_disease', 'Handedness-chiralitylaterality_Righthanded_0_0']\n",
-    "continuous_labels = ['22200_Year-of-birth_0_0|34_Year-of-birth_0_0', '21001_Body-mass-index-BMI_0_0', '1070_Time-spent-watching-television-TV_0_0', '102_Pulse-rate-automated-reading_0_0', '1488_Tea-intake_0_0', '21002_Weight_0_0']\n",
+    "categorical_labels = ['Genetic-sex_Female_0_0', 'hypertension', 'coronary_artery_disease', \n",
+    "                      'Handedness-chiralitylaterality_Righthanded_0_0', 'atrial_fibrillation_or_flutter', \n",
+    "            'coronary_artery_disease_soft', 'coronary_artery_disease', 'death', \n",
+    "            'diabetes_type_2', 'heart_failure', 'hypercholesterolemia',\n",
+    "            'hypertension', 'ischemic_stroke', 'myocardial_infarction',  'stroke']\n",
+    "continuous_labels = ['22200_Year-of-birth_0_0|34_Year-of-birth_0_0', '21001_Body-mass-index-BMI_0_0', \n",
+    "                     '1070_Time-spent-watching-television-TV_0_0', '102_Pulse-rate-automated-reading_0_0', '1488_Tea-intake_0_0', '21002_Weight_0_0']\n",
     "label_dict = {k: np.zeros((len(test_paths))) for k in categorical_labels + continuous_labels}\n",
+    "to_delete = []\n",
     "for i, tp in enumerate(test_paths):\n",
     "    hd5 = h5py.File(tp, 'r')\n",
     "    #print(list(hd5['continuous'].keys()))\n",
@@ -108,10 +105,21 @@
     "    for mk in continuous_labels:\n",
     "        for k in mk.split('|'):\n",
     "            if k in hd5['continuous']:\n",
-    "                label_dict[mk][i] = hd5['continuous'][k][0]\n",
+    "                if hd5['continuous'][k][0] < 0:\n",
+    "                    to_delete.append(i)\n",
+    "                else:\n",
+    "                    label_dict[mk][i] = hd5['continuous'][k][0]\n",
+    "            elif k == mk:\n",
+    "                to_delete.append(i)\n",
+    "                \n",
     "\n",
     "print(list(label_dict.keys()))\n",
-    "print(label_dict['22200_Year-of-birth_0_0|34_Year-of-birth_0_0'])"
+    "print(x_embed.shape)\n",
+    "print('Will delete:', len(to_delete), 'because they are missing or invalid continuous values.')\n",
+    "for k in label_dict:\n",
+    "    label_dict[k] = np.delete(label_dict[k], to_delete)\n",
+    "x_embed = np.delete(x_embed, to_delete, axis=0)\n",
+    "print(x_embed.shape)"
    ]
   },
   {
@@ -121,8 +129,9 @@
    "outputs": [],
    "source": [
     "n_components = 2\n",
-    "max_rows = 10\n",
-    "(fig, subplots) = plt.subplots(min(max_rows, len(label_dict)), 3, figsize=(16, max_rows*4))\n",
+    "max_rows = 60\n",
+    "rows = min(max_rows, len(label_dict))\n",
+    "(fig, subplots) = plt.subplots(rows, 3, figsize=(20, rows*4))\n",
     "perplexities = [8, 18, 35]\n",
     "\n",
     "p2y = {}\n",
@@ -145,11 +154,11 @@
     "        ax = subplots[j, i]\n",
     "        ax.set_title(k+\", Perplexity=%d\" % perplexity)\n",
     "        if k in categorical_labels:\n",
-    "            ax.scatter(p2y[perplexity][green, 0], p2y[perplexity][green, 1], c=\"g\")\n",
-    "            ax.scatter(p2y[perplexity][red, 0], p2y[perplexity][red, 1], c=\"r\")\n",
+    "            ax.scatter(p2y[perplexity][green, 0], p2y[perplexity][green, 1], c=\"g\", alpha=0.7)\n",
+    "            ax.scatter(p2y[perplexity][red, 0], p2y[perplexity][red, 1], c=\"r\", alpha=0.7)\n",
     "            ax.legend(['no_'+k, k], loc='lower left')\n",
     "        elif k in continuous_labels:\n",
-    "            points = ax.scatter(p2y[perplexity][:, 0], p2y[perplexity][:, 1], c=colors, cmap='jet') \n",
+    "            points = ax.scatter(p2y[perplexity][:, 0], p2y[perplexity][:, 1], c=colors, cmap='jet', alpha=0.7) \n",
     "            if i == len(perplexities)-1:\n",
     "                fig.colorbar(points, ax=ax)\n",
     "                \n",
