--- a/notebooks/mri_outliers.ipynb
+++ b/notebooks/mri_outliers.ipynb
@@ -65,13 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,\n",
-    "                                                                                       args.tensor_maps_out,\n",
-    "                                                                                       args.tensors, args.batch_size,\n",
-    "                                                                                       args.valid_ratio,\n",
-    "                                                                                       args.test_ratio,\n",
-    "                                                                                       args.icd_csv,\n",
-    "                                                                                       args.balance_by_icds, True)\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
     "\n",
     "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
     "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
