--- a/notebooks/saliency_maps.ipynb
+++ b/notebooks/saliency_maps.ipynb
@@ -70,13 +70,7 @@
     "            '--id', 'mri_slice_esv']\n",
     "args = parse_args()\n",
     "\n",
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,\n",
-    "                                                                                       args.tensor_maps_out,\n",
-    "                                                                                       args.tensors, args.batch_size,\n",
-    "                                                                                       args.valid_ratio,\n",
-    "                                                                                       args.test_ratio,\n",
-    "                                                                                       args.icd_csv,\n",
-    "                                                                                       args.balance_by_icds)\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
     "\n",
     "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
     "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
@@ -134,13 +128,7 @@
     "\n",
     "args = parse_args()\n",
     "\n",
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,\n",
-    "                                                                                       args.tensor_maps_out,\n",
-    "                                                                                       args.tensors, args.batch_size,\n",
-    "                                                                                       args.valid_ratio,\n",
-    "                                                                                       args.test_ratio,\n",
-    "                                                                                       args.icd_csv,\n",
-    "                                                                                       args.balance_by_icds)\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
     "\n",
     "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
     "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
@@ -198,13 +186,7 @@
     "\n",
     "args = parse_args()\n",
     "\n",
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,\n",
-    "                                                                                       args.tensor_maps_out,\n",
-    "                                                                                       args.tensors, args.batch_size,\n",
-    "                                                                                       args.valid_ratio,\n",
-    "                                                                                       args.test_ratio,\n",
-    "                                                                                       args.icd_csv,\n",
-    "                                                                                       args.balance_by_icds)\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
     "\n",
     "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
     "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
@@ -262,13 +244,7 @@
     "\n",
     "args = parse_args()\n",
     "\n",
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,\n",
-    "                                                                                       args.tensor_maps_out,\n",
-    "                                                                                       args.tensors, args.batch_size,\n",
-    "                                                                                       args.valid_ratio,\n",
-    "                                                                                       args.test_ratio,\n",
-    "                                                                                       args.icd_csv,\n",
-    "                                                                                       args.balance_by_icds)\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
     "\n",
     "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
     "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
@@ -325,13 +301,7 @@
     "            '--id', 'mri_systole_diastole_esv']\n",
     "args = parse_args()\n",
     "\n",
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,\n",
-    "                                                                                       args.tensor_maps_out,\n",
-    "                                                                                       args.tensors, args.batch_size,\n",
-    "                                                                                       args.valid_ratio,\n",
-    "                                                                                       args.test_ratio,\n",
-    "                                                                                       args.icd_csv,\n",
-    "                                                                                       args.balance_by_icds)\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
     "\n",
     "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
     "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
@@ -398,13 +368,7 @@
     "            '--id', 'ecg_1lead_rhythm_only']\n",
     "args = parse_args()\n",
     "\n",
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,\n",
-    "                                                                                       args.tensor_maps_out,\n",
-    "                                                                                       args.tensors, args.batch_size,\n",
-    "                                                                                       args.valid_ratio,\n",
-    "                                                                                       args.test_ratio,\n",
-    "                                                                                       args.icd_csv,\n",
-    "                                                                                       args.balance_by_icds)\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
     "\n",
     "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
     "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
